* update expat to 2.4.6-1

--- a/expat/PKGBUILD
+++ b/expat/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=expat
-pkgver=2.4.4
+pkgver=2.4.6
 pkgrel=1
 pkgdesc="An XML parser library"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -14,10 +14,11 @@ license=(MIT)
 depends=(glibc)
 makedepends=(cmake)
 provides=(libexpat.so)
+options=(debug)
 source=("https://github.com/libexpat/libexpat/releases/download/R_${pkgver//./_}/${pkgname}-${pkgver}.tar.bz2"{,.asc})
-sha512sums=('ef2df46899f3dc8f9733b7450396366c7d3d38b6b286f65b0ffa0f88c60814340c31ba8545a9b627469ca589c3de46f703490e0388160f0310cd891780684867'
+sha512sums=('87e9e9597867fc73352122b89ea3e1d0dba0d81640b1defd7633bb13108b89e1703b69358021b90f0af29854020ddbc07bf56ea6acc764e5bdecd51ee6050d99'
             'SKIP')
-b2sums=('4743e8477909168241312d3f72f7c5dbc88921e60d96c4111d1bd0f1a94db106b6c764b340275d7d746f316d4e32e6a5aabd27fc599fda7ae6d68e0f0d744999'
+b2sums=('4f41b019107f1dfc5d1b45fd5844069472e5ad2e5208ef5d7b9e4a9bdb020440d46c5ef1c7cc34fb846fc1f63b37b5ac57b692dfdcb59e52c94383945b0f456d'
         'SKIP')
 validpgpkeys=(3176EF7DB2367F1FCA4F306B1F9B0E909AF37285) # Sebastian Pipping
 
