--- a/dbus/PKGBUILD
+++ b/dbus/PKGBUILD
@@ -6,19 +6,19 @@
 
 pkgbase=dbus
 pkgname=(dbus dbus-docs)
-pkgver=1.12.20
+pkgver=1.14.0
 pkgrel=1
 pkgdesc="Freedesktop.org message bus system"
 url="https://wiki.freedesktop.org/www/Software/dbus/"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL custom)
 depends=(systemd-libs expat audit)
-makedepends=(systemd xmlto docbook-xsl python yelp-tools git autoconf-archive)
+makedepends=(systemd xmlto docbook-xsl python yelp-tools doxygen git autoconf-archive)
 source=("git+https://gitlab.freedesktop.org/dbus/dbus.git?signed#tag=dbus-$pkgver"
         dbus-reload.hook no-fatal-warnings.diff)
 sha256sums=('SKIP'
             'd636205622d0ee3b0734360225739ef0c7ad2468a09489e6ef773d88252960f3'
-            '6958eeec07557b92a28419eb1702331ee2f0a6fd17285e37dfb6130b9fa4cf6e')
+            'c10395be67e1127a58d7173b587fbbf16f8a8b271c41293558fcf9e27c185478')
 validpgpkeys=('DA98F25C0871C49A59EAFF2C4DE8FF2A63C7CC90') # Simon McVittie <simon.mcvittie@collabora.co.uk>
 
 prepare() {
@@ -37,7 +37,7 @@ build() {
     --sysconfdir=/etc \
     --localstatedir=/var \
     --libexecdir=/usr/lib/dbus-1.0 \
-    runstatedir=/run \
+    --runstatedir=/run \
     --with-console-auth-dir=/run/console/ \
     --with-dbus-user=dbus \
     --with-system-pid-file=/run/dbus/pid \
@@ -48,7 +48,7 @@ build() {
     --enable-systemd \
     --enable-user-session \
     --enable-xml-docs \
-    --disable-doxygen-docs \
+    --enable-doxygen-docs \
     --enable-ducktype-docs \
     --disable-static \
     --without-x
@@ -56,7 +56,7 @@ build() {
 }
 
 check() {
-  make -C dbus check
+  make -C dbus -j1 check
 }
 
 package_dbus() {
@@ -74,18 +74,21 @@ package_dbus() {
     install -Dm644 /dev/stdin "$pkgdir/usr/lib/sysusers.d/dbus.conf"
 
   install -Dt "$pkgdir/usr/share/libalpm/hooks" -m644 *.hook
-  install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 dbus/COPYING
 
   # Split docs
-  mv "$pkgdir/usr/share/doc" "$srcdir"
+  mkdir -p doc/usr/share
+  mv {"$pkgdir",doc}/usr/share/doc
+
+  install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 dbus/COPYING
 }
 
 package_dbus-docs() {
   pkgdesc+=" (documentation)"
   depends=()
 
+  mv doc/* "$pkgdir"
+
   install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 dbus/COPYING
-  mv doc "$pkgdir/usr/share"
 }
 
 # vim:set sw=2 et:
