* update ell to 0.49-1

--- a/ell/PKGBUILD
+++ b/ell/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jameson Pugh <imntreal@gmail.com>
 
 pkgname=ell
-pkgver=0.48
+pkgver=0.49
 pkgrel=1
 pkgdesc="Embedded Linux library"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -12,10 +12,10 @@ url="https://01.org/ell"
 license=('LGPL2.1')
 depends=('gcc-libs')
 checkdepends=('dbus')
-options=('!lto')
+options=('!lto' 'debug')
 # https://mirrors.edge.kernel.org/pub/linux/libs/ell/sha256sums.asc
 source=(https://mirrors.edge.kernel.org/pub/linux/libs/$pkgname/$pkgname-$pkgver.tar.{xz,sign})
-sha256sums=('9894943042a5d6165d3e5cc354f92274fb1304004d02b4bee682ab6067cdbbd5'
+sha256sums=('a7ff8ecbc76b187d942dd22b61cb489711400897c790319ffb7e944791687c3f'
             'SKIP')
 validpgpkeys=('E932D120BC2AEC444E558F0106CA9F5D1DCF2659') # "Marcel Holtmann <marcel@holtmann.org>"
 
