--- a/ghostscript/PKGBUILD
+++ b/ghostscript/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=ghostscript
 pkgname=(ghostscript ghostxps ghostpcl)
 pkgver=9.55.0
-pkgrel=3
+pkgrel=4
 pkgdesc="An interpreter for the PostScript language"
 url="https://www.ghostscript.com/"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -12,6 +12,7 @@ license=('AGPL3' 'custom')
 depends=('libxt' 'libcups' 'fontconfig' 'zlib' 'libpng' 'libjpeg' 'jbig2dec'
          'libtiff' 'lcms2' 'dbus' 'libpaper' 'ijs' 'openjpeg2' 'libidn')
 makedepends=('gtk3' 'gnutls' 'glu' 'freeglut')
+options=('debug')
 # https://github.com/ArtifexSoftware/ghostpdl-downloads/releases
 source=(https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs${pkgver//./}/ghostpdl-${pkgver}.tar.xz
         #https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/ghostpdl-${pkgver/.0//}/ghostpdl-${pkgver}.tar.xz
