* update linux-visionfive to 5.16.11-1

--- a/riscv64/linux-visionfive/PKGBUILD
+++ b/riscv64/linux-visionfive/PKGBUILD
@@ -1,9 +1,9 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 pkgbase=linux-visionfive
-pkgver=5.16.arch1
-pkgrel=1.1
+pkgver=5.16.11
+pkgrel=1
 pkgdesc='Linux kernel for the StarFive VisionFive V1'
-_srctag=v${pkgver%.*}-${pkgver##*.}
+commit="d7f399d52baa99c715f257707040573768ba3d97"
 url="https://git.archlinux.org/linux.git/log/?h=$_srctag"
 arch=(any)
 license=(GPL2)
@@ -12,9 +12,8 @@ makedepends=(
   riscv64-unknown-linux-gnu-gcc
 )
 options=('!strip')
-_srcname=archlinux-linux
 source=(
-  "$_srcname::git+https://github.com/archlinux/linux?signed#tag=$_srctag"
+  "${pkgbase}::git+https://github.com/starfive-tech/linux.git#commit=${commit}"
   config         # the main kernel config file
 )
 validpgpkeys=(
@@ -24,7 +23,7 @@ validpgpkeys=(
   'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
-            'f88aefe744aeb2594470acbf74028d6d15e5372236ad38279dc65fe75400daf9')
+            '8348087c686a7737d436447f3504362a90e72600594f4df8dce91b5660d961f6')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
@@ -34,7 +33,7 @@ export MYARCH="riscv"
 export CFLAGS="-O2 -pipe"
 
 prepare() {
-  cd $_srcname
+  cd $pkgbase
   echo "Setting version..."
   scripts/setlocalversion --save-scmversion
   echo "-$pkgrel" > localversion.10-pkgrel
@@ -64,7 +63,7 @@ prepare() {
 }
 
 build() {
-  cd $_srcname
+  cd $pkgname
   ARCH=${MYARCH} CROSS_COMPILE=riscv64-unknown-linux-gnu- make all
 }
 
@@ -76,7 +75,7 @@ _package() {
   provides=(WIREGUARD-MODULE)
   replaces=(wireguard-arch)
 
-  cd $_srcname
+  cd $pkgbase
   local kernver="$(<version)"
   local modulesdir="$pkgdir/usr/lib/modules/$kernver"
 
@@ -100,7 +99,7 @@ _package-headers() {
   provides=('linux-headers')
   conflicts=('linux-headers')
 
-  cd $_srcname
+  cd $pkgbase
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
 
   echo "Installing build files..."
