* update autogen to 5.18.16-2

--- a/autogen/PKGBUILD
+++ b/autogen/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=autogen
 pkgver=5.18.16
 pkgrel=2
 pkgdesc="A tool designed to simplify the creation and maintenance of programs that contain large amounts of repetitious text"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.gnu.org/software/autogen/"
 license=('GPL3')
 depends=('guile' 'libxml2' 'perl')
