--- a/systemd/PKGBUILD
+++ b/systemd/PKGBUILD
@@ -5,10 +5,10 @@
 
 pkgbase=systemd
 pkgname=('systemd' 'systemd-libs' 'systemd-resolvconf' 'systemd-sysvcompat')
-_tag='95d0353dad616c275fda9b123ba9660e16b20d0a' # git rev-parse v${_tag_name}
-_tag_name=250.2
+_tag='d066a4f747b225d47c5f5c97a8843d30878995b8' # git rev-parse v${_tag_name}
+_tag_name=250.3
 pkgver="${_tag_name/-/}"
-pkgrel=2
+pkgrel=4
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.github.com/systemd/systemd'
 makedepends=('acl' 'cryptsetup' 'docbook-xsl' 'gperf' 'lz4' 'xz' 'pam' 'libelf'
@@ -21,7 +21,7 @@ makedepends_powerpc=('kexec-tools')
 makedepends_powerpc64le=('kexec-tools' 'libseccomp')
 makedepends_riscv64=('libseccomp')
 makedepends_x86_64=('gnu-efi-libs' 'tpm2-tss' 'kexec-tools' 'libseccomp')
-options=('strip')
+options=('debug' 'strip' '!distcc' '!ccache')
 validpgpkeys=('63CDA1E5D3FC22B998D20DD6327F26951A015CC4'  # Lennart Poettering <lennart@poettering.net>
               'A9EA9081724FFAE0484C35A1A81CEA22BC8C7E2E'  # Luca Boccassi <luca.boccassi@gmail.com>
               '5C251B5FC54EB2F80F407AAAC54CA336CFEB557E') # Zbigniew Jędrzejewski-Szmek <zbyszek@in.waw.pl>
@@ -95,17 +95,18 @@ prepare() {
 build() {
   local _timeservers=({0..3}.arch.pool.ntp.org)
   local _nameservers=(
-    # We use these public name services, ordered by their
-    # privacy policy (hopefully):
+    # We use these public name services, ordered by their privacy policy (hopefully):
     #  * Cloudflare (https://1.1.1.1/)
     #  * Quad9 without filtering (https://www.quad9.net/)
     #  * Google (https://developers.google.com/speed/public-dns/)
-    1.1.1.1#cloudflare-dns.com
-    9.9.9.10#dns.quad9.net
-    8.8.8.8#dns.google
-    2606:4700:4700::1111#cloudflare-dns.com
-    2620:fe::10#dns.quad9.net
-    2001:4860:4860::8888#dns.google
+    # TODO: go back to cloudflare? Currently it is unusable with systemd-resolved...
+    #  https://community.cloudflare.com/t/ttl-for-cnames/354506
+    #'1.1.1.1#cloudflare-dns.com'
+    '9.9.9.10#dns.quad9.net'
+    '8.8.8.8#dns.google'
+    #'2606:4700:4700::1111#cloudflare-dns.com'
+    '2620:fe::10#dns.quad9.net'
+    '2001:4860:4860::8888#dns.google'
   )
 
   local _meson_options=(
@@ -163,10 +164,11 @@ build() {
       )
       ;;
   esac
-
+  
+  CC=gcc CXX=g++ \
   arch-meson "$pkgbase-stable" build "${_meson_options[@]}"
 
-  ninja -C build
+  meson compile -C build
 }
 
 check() {
@@ -178,7 +180,7 @@ package_systemd() {
   pkgdesc='system and service manager'
   license=('GPL2' 'LGPL2.1')
   depends=('acl' 'libacl.so' 'bash' 'cryptsetup' 'libcryptsetup.so' 'dbus'
-           'iptables' 'kbd' 'kmod' 'libkmod.so' 'hwids' 'libcap' 'libcap.so'
+           'iptables' 'kbd' 'kmod' 'libkmod.so' 'hwdata' 'libcap' 'libcap.so'
            'libgcrypt' 'libxcrypt' 'libcrypt.so' 'systemd-libs' 'libidn2' 'lz4' 'pam'
            'libelf' 'util-linux' 'libblkid.so'
            'libmount.so' 'xz' 'pcre2' 'audit' 'libaudit.so' 'libp11-kit'
