* update gtk2 to 2.24.33-2.1

--- a/gtk2/PKGBUILD
+++ b/gtk2/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=gtk2
 pkgver=2.24.33
-pkgrel=2
+pkgrel=2.1
 pkgdesc="GObject-based multi-platform GUI toolkit (legacy)"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.gtk.org/"
 depends=(atk pango libxcursor libxinerama libxrandr libxi libxcomposite libxdamage
-         shared-mime-info cairo desktop-file-utils gdk-pixbuf2)
+         shared-mime-info cairo libcups gtk-update-icon-cache librsvg desktop-file-utils)
 makedepends=(gobject-introspection git gtk-doc)
 optdepends=('gnome-themes-standard: Default widget theme'
             'adwaita-icon-theme: Default icon theme'
