--- a/graphviz/PKGBUILD
+++ b/graphviz/PKGBUILD
@@ -5,13 +5,13 @@
 
 pkgname=graphviz
 pkgver=2.50.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Graph visualization software'
 url='https://www.graphviz.org/'
 license=('EPL')
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libltdl' 'gd' 'librsvg' 'libxaw' 'ghostscript' 'pango' 'gts' 'gsfonts' 'libnsl' 'libpng')
-makedepends=('swig' 'guile' 'lua' 'ocaml>=4.12.0' 'perl' 'python' 'tk' 'r' 'qt5-base') #'gtk2')
+makedepends=('swig' 'guile' 'lua' 'ocaml>=4.13.1' 'perl' 'python' 'tk' 'r' 'qt5-base' 'gtk2')
 makedepends_powerpc=('mono')
 makedepends_powerpc64le=('mono')
 makedepends_x86_64=('mono')
