--- a/dotconf/PKGBUILD
+++ b/dotconf/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=dotconf
 pkgver=1.3
 pkgrel=6
 pkgdesc='A C library for parsing configuration files'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/williamh/dotconf"
 license=('LGPL2.1')
 depends=('glibc')
