* update libao to 1.2.2-5

--- a/libao/PKGBUILD
+++ b/libao/PKGBUILD
@@ -9,6 +9,7 @@ pkgrel=5
 pkgdesc="Cross-platform audio output library and plugins"
 url="https://xiph.org/ao/"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 license=('GPL2')
 depends=('gcc-libs' 'glibc')
 makedepends=('alsa-lib' 'libpulse')
