* update festival to 2.5.0-4

--- a/festival/PKGBUILD
+++ b/festival/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=festival
 pkgver=2.5.0
 pkgrel=4
 pkgdesc="A general multi-lingual speech synthesis system"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://festvox.org/festival/"
 license=(BSD GPL custom)
 depends=(perl alsa-lib)
@@ -50,12 +50,13 @@ build() {
 
   # Build Speech Tools first
   cd speech_tools
-  ./configure --prefix=/usr --sysconfdir=/etc
+  ./configure --prefix=/usr --sysconfdir=/etc --build=${CHOST}
   make OPTIMISE_CXXFLAGS="${CXXFLAGS}" OPTIMISE_CCFLAGS="${CFLAGS}"
 
   # Build Festival itself
   cd ../festival
-  ./configure --prefix=/usr --sysconfdir=/etc
+  autoreconf -fiv
+  ./configure --prefix=/usr --sysconfdir=/etc --build=${CHOST}
   make OPTIMISE_CXXFLAGS="${CXXFLAGS}" OPTIMISE_CCFLAGS="${CFLAGS}"
 }
 
