--- a/brltty/PKGBUILD
+++ b/brltty/PKGBUILD
@@ -7,9 +7,9 @@
 
 pkgname=brltty
 pkgver=6.4
-pkgrel=8
+pkgrel=9
 pkgdesc="Braille display driver for Linux/Unix"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://brltty.app"
 license=(LGPL2.1)
 depends=(bluez-libs gcc-libs glibc liblouis libspeechd pcre2 polkit)
@@ -36,7 +36,7 @@ backup=(
   etc/brltty.conf
   etc/X11/xinit/xinitrc.d/90xbrlapi
 )
-options=(!emptydirs)
+options=(debug !emptydirs)
 install=brltty.install
 source=("https://brltty.app/archive/${pkgname}-${pkgver}.tar.bz2"
         "${pkgname}-6.2-systemd_sysusers_groups.patch"
