--- a/linux-ppc64/PKGBUILD
+++ b/linux-ppc64/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux-ppc64
-pkgver=5.16.11.arch1
+pkgver=5.16.13.arch1
 pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -11,13 +11,14 @@ arch=(any)
 license=(GPL2)
 makedepends=(
   bc kmod libelf pahole git
-  powerpc64-linux-gnu-gcc
+  powerpc64-unknown-linux-gnu-gcc
 )
 options=('!strip')
 _srcname=archlinux-linux
 source=(
   "$_srcname::git+https://github.com/archlinux/linux?signed#tag=$_srctag"
   config         # the main kernel config file
+  linux-powerpc-binutils-2.38.patch
 )
 validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
@@ -26,7 +27,8 @@ validpgpkeys=(
   'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
-            '4f7758ee7fe342f47c63f3103ba74a6fd8d42a13e28b84ef065eb2d9431e3108')
+            '4f7758ee7fe342f47c63f3103ba74a6fd8d42a13e28b84ef065eb2d9431e3108'
+            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
@@ -58,15 +60,15 @@ prepare() {
 
   echo "Setting config..."
   cp ../config .config
-  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-linux-gnu- make oldconfig
+  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-unknown-linux-gnu- make oldconfig
 
-  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-linux-gnu- make -s kernelrelease > version
+  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-unknown-linux-gnu- make -s kernelrelease > version
   echo "Prepared $pkgbase version $(<version)"
 }
 
 build() {
   cd $_srcname
-  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-linux-gnu- make all
+  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-unknown-linux-gnu- make all
 }
 
 _package() {
@@ -84,13 +86,13 @@ _package() {
   echo "Installing boot image..."
   # systemd expects to find the kernel here to allow hibernation
   # https://github.com/systemd/systemd/commit/edda44605f06a41fb86b7ab8128dcf99161d2344
-  install -Dm644 "$(ARCH=${MYARCH} CROSS_COMPILE=powerpc64-linux-gnu- make -s image_name)" "$modulesdir/vmlinuz"
+  install -Dm644 "$(ARCH=${MYARCH} CROSS_COMPILE=powerpc64-unknown-linux-gnu- make -s image_name)" "$modulesdir/vmlinuz"
 
   # Used by mkinitcpio to name the kernel
   echo "$pkgbase" | install -Dm644 /dev/stdin "$modulesdir/pkgbase"
 
   echo "Installing modules..."
-  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-linux-gnu- make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 modules_install
+  ARCH=${MYARCH} CROSS_COMPILE=powerpc64-unknown-linux-gnu- make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 modules_install
 
   # remove build and source links
   rm "$modulesdir"/{source,build}
