--- a/filesystem/PKGBUILD
+++ b/filesystem/PKGBUILD
@@ -4,21 +4,21 @@
 
 pkgname=filesystem
 pkgver=2021.12.07
-pkgrel=1
+pkgrel=1.2
 pkgdesc='Base Arch Linux files'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 url='https://archlinux.org'
 depends=('iana-etc')
 backup=('etc/crypttab' 'etc/fstab' 'etc/group' 'etc/gshadow' 'etc/host.conf'
-        'etc/hosts' 'etc/issue' 'etc/ld.so.conf' 'etc/motd' 'etc/nsswitch.conf'
+        'etc/hosts' 'etc/issue' 'etc/ld.so.conf' 'etc/nsswitch.conf'
         'etc/passwd' 'etc/profile' 'etc/resolv.conf' 'etc/securetty'
         'etc/shadow' 'etc/shells')
 source=('crypttab' 'env-generator' 'fstab' 'group' 'gshadow' 'host.conf' 'hosts'
-        'issue' 'ld.so.conf' 'locale.sh' 'motd' 'nsswitch.conf' 'os-release'
+        'issue' 'ld.so.conf' 'locale.sh' 'nsswitch.conf' 'os-release'
         'passwd' 'profile' 'resolv.conf' 'securetty' 'shadow' 'shells' 'sysctl'
-        'sysusers' 'tmpfiles' 'archlinux.svg' 'archlinux.png'
-        'archlinux-logo.svg' 'archlinux-logo.png')
+        'sysusers' 'tmpfiles' 'archlinux-logo.svg' 'archlinux-logo.png'
+        'archlinux-logo-text.svg' 'archlinux-logo-text-dark.svg')
 sha256sums=('e03bede3d258d680548696623d5979c6edf03272e801a813c81ba5a5c64f4f82'
             'ed0cb4f1db4021f8c3b5ce78fdf91d2c0624708f58f36c9cf867f4d93c3bc6da'
             'e54626e74ed8fee4173b62a545ab1c3a3a069e4217a0ee8fc398d9933e9c1696'
@@ -29,9 +29,8 @@ sha256sums=('e03bede3d258d680548696623d5979c6edf03272e801a813c81ba5a5c64f4f82'
             '26478739385bbe3e9a1b0525cfb522d0de007069a4011419b7ba0537b8c31150'
             'dad04a370e488aa85fb0a813a5c83cf6fd981ce01883fc59685447b092de84b5'
             '8ca2d8eef6fb5143c9ef7e9174ccfef59ac7ad2deee243574cd10c763156cc10'
-            'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855'
             'c8ee7a9faf798caab178ec51afae4146f1efd8a716b7acedf28345b6c75f9697'
-            'c0b6858a129b1416fa70ba32127ca0039531054b89ad04e7e74cb43d29b9ab67'
+            'd55e451086badd224e13bb9f2c761fc8894ba7757988b20c87a611c21267cebd'
             '5e06477834f51abf42ea4e8dc199632afc6afbfd8c44354685a271e9a48d2c0a'
             '5e4088ad8d0853d390fa303f6be8c3f69c33834200cba9e90f7849f1993ca8d0'
             '5557d8e601b17a80d1ea7de78a9869be69637cb6a02fbfe334e22fdf64e61d4c'
@@ -41,10 +40,10 @@ sha256sums=('e03bede3d258d680548696623d5979c6edf03272e801a813c81ba5a5c64f4f82'
             '89e43a0b7028f52d5c8e7fb961d962c4b4f4e9595880a6157274ddb2c7c0b6b4'
             'b5b28f395583d141d88c0b955cd05124f9b8cdf003feab01e55885b8e8c1303e'
             'f17efd1c6480c5db1fdab4a0e3cfcd4baa44a3e1ae1210aebeb40f8d5c82f742'
-            '450a4fd61a58af97329241ef2e199a68ab07ea2937c73c968469afc52fd9bc8d'
-            '889c92e34d11d2dada952adb1c364a48b7fdfcdc381cfff865ff96a348d19e80'
-            '51da5fdeaa2b56c1730e7a2abb46b956500368f6f563bf38a5979be8d9d28d33'
-            '290fc432fc3b4748acca48639538fa5c101d9d344911882c7952d83651cd57ad')
+            '3ffe8ea4e98db43a3ec4dcca55fd4009cd8b8d220f0996aef7a5b427fdf65234'
+            '3f48779141b68a81e07fee710a42025d4f67b16240295aa4cf148a7ba99cab3c'
+            '601069e6e8920309178c397fd8cebe43410827d01899d31777d13212f0dfacf8'
+            '96e3cc81623c0537a19799f9eefa966fe46ff5f28a9dc7af1187990973baa127')
 
 package() {
   cd "$pkgdir"
@@ -128,7 +127,7 @@ package() {
   install -D -m755 "$srcdir"/env-generator usr/lib/systemd/system-environment-generators/10-arch
 
   # add logo
-  install -D -m644 "$srcdir"/archlinux{,-logo}.{svg,png} usr/share/pixmaps
+  install -D -m644 "$srcdir"/archlinux-logo{.png,.svg,-text.svg,-text-dark.svg} usr/share/pixmaps
 }
 
 # vim:set ts=2 sw=2 et:
