--- a/gtk4/PKGBUILD
+++ b/gtk4/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=gtk4
 pkgname=(gtk4 gtk-update-icon-cache gtk4-docs gtk4-demos)
-pkgver=4.6.0
+pkgver=4.6.1
 pkgrel=2
 epoch=1
 pkgdesc="GObject-based multi-platform GUI toolkit"
@@ -19,12 +19,10 @@ depends=(glib2 cairo pango fribidi gdk-pixbuf2 libpng libtiff libjpeg libepoxy
 makedepends=(git meson gi-docgen shaderc sassc gobject-introspection docbook-xsl
              wayland-protocols python-gobject python-docutils)
 checkdepends=(weston)
-_commit=70cb61fb7104c76a15bc6494a10e6ff1d470f6d8  # tags/4.6.0^0
+_commit=5088103d31942e2af87ed64a61967cdc6af48f78  # tags/4.6.1^0
 source=("git+https://gitlab.gnome.org/GNOME/gtk.git#commit=$_commit"
-        fix-resources.diff
         gtk-update-icon-cache.{hook,script} gtk4-querymodules.hook)
 sha256sums=('SKIP'
-            'd458d2b9621f5131510238f1167a758d1f6c4baabc2a7fe5f445c7bdba2b0802'
             '2d435e3bec8b79b533f00f6d04decb1d7c299c6e89b5b175f20be0459f003fe8'
             'f1d3a0dbfd82f7339301abecdbe5f024337919b48bd0e09296bb0e79863b2541'
             'cd8e607eddd9941f279084e1d15309941423d26cca1897f43524a02e58e48816')
@@ -36,10 +34,6 @@ pkgver() {
 
 prepare() {
   cd gtk
-
-  # Ensure noexecstack
-  git cherry-pick -n 46509b6dd28c58ae 17c2a1cb4ea2093d
-  git apply -3 ../fix-resources.diff
 }
 
 build() {
@@ -81,6 +75,7 @@ _pick() {
 
 package_gtk4() {
   depends+=(gtk-update-icon-cache)
+  optdepends=('evince: Default print preview command')
   provides=(libgtk-4.so)
 
   meson install -C build --destdir "$pkgdir"
