--- a/qt6/qt6-base/PKGBUILD
+++ b/qt6/qt6-base/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-base
-_qtver=6.2.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
 pkgrel=5
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,14 +13,13 @@ license=(GPL3 LGPL3 FDL custom)
 pkgdesc='A cross-platform application and UI framework'
 depends=(libjpeg-turbo xcb-util-keysyms xcb-util-cursor libgl fontconfig xdg-utils
          shared-mime-info xcb-util-wm libxrender libxi sqlite mesa vulkan-headers
-         tslib libinput libxkbcommon-x11 libcups double-conversion brotli md4c)
+         tslib libinput libxkbcommon-x11 libproxy libcups double-conversion brotli md4c)
+depends_x86_64=(libb2)
 makedepends=(cmake ninja mariadb-libs unixodbc postgresql alsa-lib gst-plugins-base-libs
              gtk3 libpulse cups freetds xmlstarlet)
-depends_powerpc=(libproxy)
-depends_powerpc64le=(libproxy)
-depends_x86_64=(libb2 libproxy)
 makedepends_x86_64=(libfbclient)
-optdepends=('postgresql-libs: PostgreSQL driver'
+optdepends=('qt6-wayland: to run Qt6 applications in a Wayland session'
+            'postgresql-libs: PostgreSQL driver'
             'mariadb-libs: MariaDB driver'
             'unixodbc: ODBC driver'
             'freetds: MS SQL driver'
@@ -28,20 +27,18 @@ optdepends=('postgresql-libs: PostgreSQL driver'
             'perl: for syncqt')
 optdepends_x86_64=('libfbclient: Firebird/iBase driver')
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz
-        qt6-base-cflags.patch
-        qt6-base-nostrip.patch
-        qtbug-97908.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=9b7f7115)
-sha256sums=('85ab9180180c2eaf84cd11ae4c6d5a6a69f2f8fd7260aaccfd91a3e7e7232c1a'
+        qmake-cflags.patch
+        qmake-config.patch)
+sha256sums=('34d6d0072e197241463c417ad72610c3d44e2efd6062868e9a95283103d75df4'
             '5411edbe215c24b30448fac69bd0ba7c882f545e8cf05027b2b6e2227abc5e78'
-            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
-            '06590303498a10950408d26f027928ec12019fe631237d1862c2d720f1d331bb')
+            '4abc22150fa3e06b2fdcec32146abc9be4e316692aa4d5bd5aa53b4b726783fa')
 
 prepare() {
-  patch -d $_pkgfn -p1 < qt6-base-cflags.patch # Use system CFLAGS
-  patch -d $_pkgfn -p1 < qt6-base-nostrip.patch # Don't strip binaries with qmake
-  patch -d $_pkgfn -p1 < qtbug-97908.patch # Fix scrolling with PgUp/PgDown keys
+  patch -d $_pkgfn -p1 < qmake-cflags.patch # Use system CFLAGS
+  patch -d $_pkgfn -p1 < qmake-config.patch # Don't strip binaries with qmake and use -ltcg, cf. QTBUG-73834
 }
 
 build() {
@@ -52,6 +49,7 @@ build() {
 
   cmake -B build -S $_pkgfn -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
     -DINSTALL_BINDIR=lib/qt6/bin \
     -DINSTALL_PUBLICBINDIR=usr/bin \
     -DINSTALL_LIBEXECDIR=lib/qt6 \
@@ -68,6 +66,7 @@ build() {
 }
 
 package() {
+  depends+=(qt6-translations)
   DESTDIR="$pkgdir" cmake --install build
 
   install -Dm644 $_pkgfn/LICENSE* -t "$pkgdir"/usr/share/licenses/$pkgbase
