* update rust to 1:1.58.0-1

--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -7,10 +7,10 @@
 
 pkgname=('rust' 'rust-docs')
 epoch=1
-pkgver=1.57.0
+pkgver=1.58.0
 pkgrel=1
 
-_llvm_ver=13.0.0
+_llvm_ver=13.0.1
 
 pkgdesc='Systems programming language focused on safety, speed and concurrency'
 url='https://www.rust-lang.org/'
@@ -33,9 +33,9 @@ source=(
   0002-compiler-Change-LLVM-targets.patch
   0003-compiler-Use-wasm-ld-for-wasm-targets.patch
 )
-sha256sums=('3546f9c3b91b1f8b8efd26c94d6b50312c08210397b4072ed2748e2bd4445c1a'
+sha256sums=('a7c8eeaee85bfcef84c96b02b3171d1e6540d15179ff83dddd9eafba185f85f9'
             'SKIP'
-            '4c3602d76c7868a96b30c36165c4b7643e2a20173fced7e071b4baeb2d74db3f'
+            '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
             'SKIP'
             'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
             '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
@@ -166,3 +166,11 @@ package_rust-docs() {
 }
 
 # vim:set ts=2 sw=2 et:
+sha256sums=('0ad531a32f3c2e996b9322c6b7262a9cfe557e49ff3363adea07b575106cd770'
+            'SKIP'
+            '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
+            'SKIP'
+            'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
+            '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
+            '977da945985dce4484ace8794cbc91241b1f3c27311c1a8b201231db6e1d19e5'
+            'fcf3c4442ba6a9e59415652ce8514428b2e37b80c5fe7d07fb44259ad37abafb')
