--- a/qt6/qt6-declarative/PKGBUILD
+++ b/qt6/qt6-declarative/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-declarative
-_qtver=6.2.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc riscv64)
+pkgrel=2
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Classes for QML and JavaScript languages'
@@ -17,19 +17,22 @@ conflicts=(qt6-quickcontrols2)
 provides=(qt6-quickcontrols2)
 replaces=(qt6-quickcontrols2)
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('1a04ef0092b31354e0fded0d8391865719cb58f9ca5dc604da2b1f62c742cf28')
+sha256sums=('2618c31f64820ed426ebfe2c10b6f3a43f08d2c03d6c63f024bc396455c1a86b')
 
 build() {
+  export CXXFLAGS+=" -ffat-lto-objects"
+
   case "${CARCH}" in
     powerpc|riscv64) 
       export CXXFLAGS="-latomic -Wl,--as-needed"
     ;;
   esac
-      
+
   cmake -B build -S $_pkgfn -G Ninja \
-    -DINSTALL_PUBLICBINDIR=usr/bin ${PLATFORM_CMAKE_FLAGS}
+    -DINSTALL_PUBLICBINDIR=usr/bin
   cmake --build build
 }
 
@@ -39,8 +42,6 @@ package() {
 # Install symlinks for user-facing tools
   cd "$pkgdir"
   mkdir usr/bin
-  ls -l "$srcdir"/build/user_facing_tool_links.txt
-  cat "$srcdir"/build/user_facing_tool_links.txt
   while read _line; do
     ln -s $_line
   done < "$srcdir"/build/user_facing_tool_links.txt
