* update qt6-3d to 6.2.3-3

--- a/qt6/qt6-3d/PKGBUILD
+++ b/qt6/qt6-3d/PKGBUILD
@@ -4,29 +4,28 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-3d
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=3
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='C++ and QML APIs for easy inclusion of 3D graphics'
 depends=(qt6-base)
-makedepends=(cmake qt6-declarative qt6-shadertools vulkan-headers) # assimp
-optdepends=('qt6-shadertools: RHI renderer' 'qt6-declarative: QML bindings')
+makedepends=(cmake ninja qt6-declarative qt6-shadertools assimp)
+optdepends=('qt6-shadertools: RHI renderer' 'qt6-declarative: QML bindings' 'assimp: assimp importer plugin')
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
-source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz
-        qt6-3d-gcc11.patch)
-sha256sums=('632e6dfa3af4e9ef6d8c54843e5db62b07b3d8a3435d2687e4dd256efd8f0d2d'
-            'b056d66a24956755c2aaddc4adddd71f5a945ff9795b0cbf9f43ab4d43b4f8f5')
-
-prepare() {
-  patch -d $_pkgfn -p1 < qt6-3d-gcc11.patch # Fix build with GCC 11
-}
+source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
+sha256sums=('7ae9b513a88e729bf7db5e0e5c8d38b62e1c06f968aa620db423cd102dbbc85d')
 
 build() {
-  cmake -B build -S $_pkgfn
+  case "${CARCH}" in
+    riscv64) _cmake_options+=(-DCMAKE_CXX_FLAGS="-latomic") ;;
+  esac
+
+  cmake -B build -S $_pkgfn -G Ninja ${_cmake_options[@]}
   cmake --build build
 }
 
