--- a/qt6/qt6-quicktimeline/PKGBUILD
+++ b/qt6/qt6-quicktimeline/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-quicktimeline
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Qt module for keyframe-based timeline construction'
 depends=(qt6-declarative)
-makedepends=(cmake vulkan-headers)
+makedepends=(cmake ninja)
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('b0aec128f957db0d2bc1e51f6878cf1204f33c967123666164dd41683c459581')
+sha256sums=('aa29504d234c891dac3ac8bf390f77e43d9827d0f5cea411039144f2ef2c2333')
 
 build() {
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
