--- a/qt6/qt6-quick3d/PKGBUILD
+++ b/qt6/qt6-quick3d/PKGBUILD
@@ -4,30 +4,34 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-quick3d
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=3
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
-license=(GPL3 LGPL3 FDL custom)
+license=(GPL3)
 pkgdesc='Qt module and API for defining 3D content in Qt Quick'
-depends=(qt6-declarative)
-makedepends=(cmake vulkan-headers qt6-shadertools)
-# TODO: use system assimp again when a new version is released
-optdepends=('qt6-shadertools: for shadergen')
+depends=(qt6-quicktimeline)
+makedepends=(cmake ninja qt6-shadertools assimp)
+optdepends=('qt6-shadertools: for shadergen' 'assimp: assimp import plugin')
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz
-        qt6-3d-gcc11.patch)
-sha256sums=('b0af0b42ff1b126675b7844946fa2748ea5c63e0f92b46974b0ad18f3136d389'
-            'b056d66a24956755c2aaddc4adddd71f5a945ff9795b0cbf9f43ab4d43b4f8f5')
+        qt6-quick3d-assimp-5.1.patch)
+sha256sums=('c45294f917232320a2cf67ee25b518f6ff3cdf989b8cecfb2ed73569ab28661e'
+            '49eb8feec3fdd1972266cf97fd8d40f0eb7e544c1957569c4b9f182348b17492')
 
 prepare() {
-  patch -d $_pkgfn -p1 < qt6-3d-gcc11.patch # Fix build with GCC 11
+  patch -d $_pkgfn -p1 < qt6-quick3d-assimp-5.1.patch # Fix build with assimp 5.1
 }
 
 build() {
-  cmake -B build -S $_pkgfn
+  case "${CARCH}" in
+    riscv64) _cmake_options+=(-DCMAKE_CXX_FLAGS="-latomic") ;;
+  esac
+
+  cmake -B build -S $_pkgfn -G Ninja ${_cmake_options}
   cmake --build build
 }
 
