* update firefox to 98.0-1

--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,15 +4,15 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=96.0.3
+pkgver=98.0
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 license=(MPL GPL LGPL)
 url="https://www.mozilla.org/firefox/"
 depends=(gtk3 libxt mime-types dbus-glib ffmpeg nss ttf-font libpulse jemalloc)
 makedepends=(unzip zip diffutils mesa imake inetutils xorg-server-xvfb
-             autoconf2.13 rust clang llvm jack gtk2 nodejs-lts-dubnium cbindgen
+             autoconf2.13 rust clang llvm jack gtk2 nodejs cbindgen
              python-setuptools python-psutil lld dump_syms
              wasi-compiler-rt wasi-libc wasi-libc++ wasi-libc++abi)
 optdepends=('networkmanager: Location detection via available WiFi networks'
@@ -31,7 +31,7 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         flac-no-ffvpx.patch
         avoid-redefinition.patch
         firefox-pgo.diff)
-sha256sums=('1a741d6fcf20e6833a90169f41d29141ea4610f58b848e06091a683af6304dea'
+sha256sums=('fd0a4c11d007d9045706667eb0f99f9b7422945188424cb937bfef530cb6f4dd'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
             'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
@@ -72,7 +72,7 @@ prepare() {
   patch -Np1 -i ${srcdir}/firefox-pgo.diff
 
   case "${CARCH}" in
-    powerpc64le)
+    powerpc64le|riscv64)
       CC=gcc
       CXX=g++
       ;;
