--- a/xorg/xorg-xrdb/PKGBUILD
+++ b/xorg/xorg-xrdb/PKGBUILD
@@ -6,6 +6,7 @@ pkgver=1.2.1
 pkgrel=1
 pkgdesc="X server resource database utility"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu')
