--- a/xorg/xorg-xmodmap/PKGBUILD
+++ b/xorg/xorg-xmodmap/PKGBUILD
@@ -5,7 +5,8 @@ pkgname=xorg-xmodmap
 pkgver=1.0.10
 pkgrel=2
 pkgdesc="Utility for modifying keymaps and button mappings"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11')
