--- a/xorg/xorg-xinit/PKGBUILD
+++ b/xorg/xorg-xinit/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xinit
 pkgver=1.4.1
 pkgrel=3
 pkgdesc="X.Org initialisation program "
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 url="https://xorg.freedesktop.org/"
 depends=('libx11' 'xorg-xauth' 'xorg-xrdb' 'xorg-xmodmap')
