* update xorg-twm to 1.0.11-1

--- a/xorg/xorg-twm/PKGBUILD
+++ b/xorg/xorg-twm/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-twm
 pkgver=1.0.11
 pkgrel=1
 pkgdesc="Tab Window Manager for the X Window System"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 backup=(usr/share/X11/twm/system.twmrc)
 license=('custom')
