--- a/qt6/qt6-tools/PKGBUILD
+++ b/qt6/qt6-tools/PKGBUILD
@@ -4,23 +4,24 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-tools
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=4
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='A cross-platform application and UI framework (Development Tools, QtHelp)'
 depends=(qt6-base)
-makedepends=(cmake qt6-declarative vulkan-headers clang llvm)
+makedepends=(cmake ninja qt6-declarative clang llvm)
 optdepends=('clang: for qdoc and lupdate')
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('a0520097ac1f898381c4512fb55ba5aa187d8e4e06ed0dcd2cbe265cd037989b')
+sha256sums=('9aadbd5a14fad8874d2aa76be79652ec5ed81d31d49b3eff245ebeffc7d8ac08')
 
 build() {
-  cmake -B build -S $_pkgfn \
+  cmake -B build -S $_pkgfn -G Ninja \
     -DINSTALL_PUBLICBINDIR=usr/bin
   cmake --build build
 }
