--- a/qt6/qt6-svg/PKGBUILD
+++ b/qt6/qt6-svg/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-svg
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Classes for displaying the contents of SVG files'
 depends=(qt6-base)
-makedepends=(cmake vulkan-headers)
+makedepends=(cmake ninja)
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('8f6ae706ae8ba54e52bc765cc03ea3c815d312c920e023630639151eab80fe21')
+sha256sums=('4a6bc9eeafa231ee9516f0fe84ddb0fbe8fba94844f4e7bd34c381e01610e2ee')
 
 build() {
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
