--- a/qt6/qt6-5compat/PKGBUILD
+++ b/qt6/qt6-5compat/PKGBUILD
@@ -4,23 +4,24 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-5compat
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Module that contains unsupported Qt 5 APIs'
 depends=(qt6-base)
-makedepends=(cmake qt6-declarative)
+makedepends=(cmake ninja qt6-declarative)
 optdepends=('qt6-declarative: for QtGraphicalEffects')
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('12103499068bf9c0aef736a19553f557babfad6faf6777f9ebfd6159583b7981')
+sha256sums=('1cf89198cf2cf8a5c15336ccd69fa1f39b779feb64117d6bbf5509c21c123f53')
 
 build() {
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
