--- a/qt6/qt6-wayland/PKGBUILD
+++ b/qt6/qt6-wayland/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-wayland
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Provides APIs for Wayland'
 depends=(qt6-declarative libxcomposite)
-makedepends=(cmake vulkan-headers)
+makedepends=(cmake ninja)
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('c5724b8421017dca13054160515e48955a1d1b13e234cdf8b64783f4f21f6148')
+sha256sums=('48fdc52b1241d35532a24beebf5856d78eadc0f1f88a0a48b51a51e279c4ce72')
 
 build() {
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
