* update qt6-doc to 6.2.3-1

--- a/qt6/qt6-doc/PKGBUILD
+++ b/qt6/qt6-doc/PKGBUILD
@@ -5,27 +5,21 @@
 
 pkgbase=qt6-doc
 pkgname=(qt6-doc qt6-examples)
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
 pkgrel=1
 arch=('any')
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
-makedepends=(cmake mariadb-libs unixodbc postgresql alsa-lib gst-plugins-base-libs
+makedepends=(cmake ninja mariadb-libs unixodbc postgresql alsa-lib gst-plugins-base-libs
              gtk3 libpulse cups freetds vulkan-headers clang python llvm qt6-tools)
 groups=(qt6)
 _pkgfn="qt-everywhere-src-$_qtver"
-source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/single/$_pkgfn.tar.xz
-         qt6-doc-bindir.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=582fdf06)
-sha256sums=('4b40f10eb188506656f13dbf067b714145047f41d7bf83f03b727fa1c7c4cdcb'
-            '60eebdf88559fefdb2b7c65b5f4ec091942aa1ffa371bedb4080545383b46109')
-
-prepare() {
-  patch -d $_pkgfn/qtbase -p1 -i ../../qt6-doc-bindir.patch # Use installed tools
-}
+source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/single/$_pkgfn.tar.xz)
+sha256sums=('f784998a159334d1f47617fd51bd0619b9dbfe445184567d2cd7c820ccb12771')
 
 build() {
-  cmake -B build -S $_pkgfn \
+  cmake -B build -S $_pkgfn -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DQT_HOST_PATH=/usr \
     -DINSTALL_BINDIR=lib/qt6/bin \
