* update qt6-translations to 6.2.3-1

--- a/qt6/qt6-translations/PKGBUILD
+++ b/qt6/qt6-translations/PKGBUILD
@@ -4,23 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-translations
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
 pkgrel=1
 arch=(any)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='A cross-platform application and UI framework (Translations)'
-depends=(qt6-base)
-makedepends=(cmake qt6-tools)
+depends=()
+makedepends=(cmake ninja qt6-tools)
 groups=(qt6)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('cf5dd3fed8f5f92f570c0d09bf635adbc7a40b748d48856a33109bc9c3781a1b')
+sha256sums=('e5923d76d82460e8b35fc5a34674ec4c70120ba641fc80ee42848bf2df1bb70c')
 
 build() {
   export PATH="/usr/lib/qt6/bin:$PATH"
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build -j1
 }
 
