--- a/ethtool/PKGBUILD
+++ b/ethtool/PKGBUILD
@@ -4,16 +4,16 @@
 # Contributor: Martin Kemp <mdkemp@elys.com>
 
 pkgname=ethtool
-pkgver=5.14
+pkgver=5.16
 pkgrel=1
 epoch=1
 pkgdesc="Utility for controlling network drivers and hardware"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.kernel.org/pub/software/network/ethtool/"
 license=('GPL')
 depends=('glibc' 'libmnl')
 source=(https://www.kernel.org/pub/software/network/$pkgname/$pkgname-$pkgver.tar.{xz,sign})
-sha1sums=('7fa8f7bd38d8a22957b45123e9ab64dc07d93897'
+sha1sums=('864030a14b517d8d79d76bc38bc96c34682fc9ba'
           'SKIP')
 validpgpkeys=(CE4A4D080F0D304F23B9EBDD972D5BF4DC613806  # John W. Linville <linville@kernel.org>
               D2CB120AB45957B721CD9596F4554567B91DE934) # Michal Kubecek <mkubecek@suse.cz>
