--- a/firewalld/PKGBUILD
+++ b/firewalld/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: speed145a <jonathan@tagchapter.com>
 
 pkgname=firewalld
-pkgver=1.0.1
-pkgrel=1
+pkgver=1.0.3
+pkgrel=2
 pkgdesc='Firewall daemon with D-Bus interface'
 arch=(any)
 url=https://firewalld.org/
@@ -30,13 +30,14 @@ optdepends=(
   'gtk3: firewall-config'
   'libnotify: firewall-applet'
   'nm-connection-editor: firewalld-applet'
+  'python-capng: drop daemon capabilities'
   'python-pyqt5: firewall-applet'
 )
 backup=(
   etc/conf.d/firewalld
   etc/firewalld/firewalld.conf
 )
-_tag=1fc801a2c3e1297bf45db09df0788ab3de80c396
+_tag=b36cd7384eef067a0154ed535bcb80acffe59786
 source=(
   git+https://github.com/firewalld/firewalld.git#tag=${_tag}
   firewalld-sysconfigdir.patch
@@ -72,7 +73,6 @@ build() {
 
 package() {
   make DESTDIR="${pkgdir}" -C firewalld install
-  export PYTHONHASHSEED=0
   python -m compileall -d /usr/lib "$pkgdir/usr/lib"
   python -O -m compileall -d /usr/lib "$pkgdir/usr/lib"
 }
