* update gpgme to 1.17.0-2

--- a/gpgme/PKGBUILD
+++ b/gpgme/PKGBUILD
@@ -6,7 +6,7 @@
 pkgbase=gpgme
 pkgname=(gpgme qgpgme python-gpgme)
 pkgver=1.17.0
-pkgrel=1
+pkgrel=2
 _python_ver=3.10
 pkgdesc='A C wrapper library for GnuPG'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -32,19 +32,19 @@ prepare() {
 build() {
   cd ${pkgbase}-${pkgver}
 
-  ./configure \
-    --build=${CHOST} \
-    --prefix=/usr \
-    --disable-fd-passing \
-    --disable-static \
-    --disable-gpgsm-test
-  make
-
   _pyarch=${CARCH}
   case "${CARCH}" in
     powerpc)     _pyarch=ppc ;;
     powerpc64le) _pyarch=ppc64le ;;
   esac
+
+  ./configure \
+    --prefix=/usr \
+    --disable-fd-passing \
+    --disable-static \
+    --disable-gpgsm-test \
+    --build=${CHOST}
+  make
 
   # ensure reproducibility of .pyc files
   touch -d @$SOURCE_DATE_EPOCH lang/python/version.py
@@ -68,7 +68,7 @@ check() {
 
 package_gpgme() {
   depends=('libgpg-error' 'gnupg>=2')
-  options=('!emptydirs')
+  options+=('!emptydirs')
   provides=('libgpgme.so'
             'libgpgmepp.so')
 
