--- a/zstd/PKGBUILD
+++ b/zstd/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=zstd
 pkgver=1.5.2
-pkgrel=2
+pkgrel=3
 pkgdesc='Zstandard - Fast real-time compression algorithm'
 url='https://facebook.github.io/zstd/'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -24,7 +24,8 @@ validpgpkeys=(4EF4AC63455FC9F4545D9B7DEF8FE99528B52FFD)
 
 build() {
   cd ${pkgname}-${pkgver}
-  make
+  # Set PREFIX, as libzstd.pc is otherwise generated with -L/usr/local
+  make PREFIX=/usr
   make -C contrib/pzstd
 }
 
