* update gcab to 1.4-2

--- a/gcab/PKGBUILD
+++ b/gcab/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=1.4
 pkgrel=2
 pkgdesc="A GObject library to create cabinet files"
 url="https://wiki.gnome.org/msitools"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2)
 makedepends=(gobject-introspection vala zlib git gtk-doc meson)
