* update xorg-xwd to 1.0.8-1

--- a/xorg/xorg-xwd/PKGBUILD
+++ b/xorg/xorg-xwd/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xwd
 pkgver=1.0.8
 pkgrel=1
 pkgdesc="X Window System image dumping utility"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxkbfile')
