* update xorg-xrefresh to 1.0.6-2

--- a/xorg/xorg-xrefresh/PKGBUILD
+++ b/xorg/xorg-xrefresh/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xrefresh
 pkgver=1.0.6
 pkgrel=2
 pkgdesc="Refresh all or part of an X screen"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11')
