* update xorg-xmag to 1.0.6-3

--- a/xorg/xorg-xmag/PKGBUILD
+++ b/xorg/xorg-xmag/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xmag
 pkgver=1.0.6
 pkgrel=3
 pkgdesc="Magnify parts of the screen"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxmu' 'libxt' 'libx11')
@@ -17,7 +17,7 @@ validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <al
 
 build() {
   cd xmag-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
