* update xorg-xlogo to 1.0.5-2

--- a/xorg/xorg-xlogo/PKGBUILD
+++ b/xorg/xorg-xlogo/PKGBUILD
@@ -5,8 +5,7 @@ pkgname=xorg-xlogo
 pkgver=1.0.5
 pkgrel=2
 pkgdesc="Draw [old] X logo"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libsm' 'libxaw' 'libxmu' 'libxt' 'libxext' 'libx11' 'libxrender' 'libxft')
