* update xorg-xkbevd to 1.1.4-3

--- a/xorg/xorg-xkbevd/PKGBUILD
+++ b/xorg/xorg-xkbevd/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xkbevd
 pkgver=1.1.4
 pkgrel=3
 pkgdesc="XKB event daemon"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxkbfile')
@@ -18,7 +18,7 @@ validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <al
 
 build() {
   cd xkbevd-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
