* update xorg-xinput to 1.6.3-2

--- a/xorg/xorg-xinput/PKGBUILD
+++ b/xorg/xorg-xinput/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xinput
 pkgver=1.6.3
 pkgrel=2
 pkgdesc="Small commandline tool to configure devices"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxi>=1.5.99.2' 'xorg-xrandr' 'libxinerama')
