* update xorg-xdm to 1.1.12-3

--- a/xorg/xorg-xdm/PKGBUILD
+++ b/xorg/xorg-xdm/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xdm
 pkgver=1.1.12
 pkgrel=3
 pkgdesc="X Display Manager"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('pam' 'libxaw' 'libxinerama' 'xorg-xrdb' 'xorg-sessreg' 'libxft' 'systemd' 'libxcrypt')
