* update xorg-xcursorgen to 1.0.7-2

--- a/xorg/xorg-xcursorgen/PKGBUILD
+++ b/xorg/xorg-xcursorgen/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xorg-xcursorgen
 pkgver=1.0.7
 pkgrel=2
 pkgdesc="Create an X cursor file from PNG images"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxcursor' 'libpng')
