* update xorg-xconsole to 1.0.7-3

--- a/xorg/xorg-xconsole/PKGBUILD
+++ b/xorg/xorg-xconsole/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xconsole
 pkgver=1.0.7
 pkgrel=3
 pkgdesc="Monitor system console messages with X"
-arch=( x86_64 powerpc64le powerpc )
+arch=( x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxaw' 'libxmu' 'libxt' 'libx11')
@@ -17,7 +17,7 @@ validpgpkeys=('3BB639E56F861FA2E86505690FDD682D974CA72A')
 
 build() {
   cd "${srcdir}/xconsole-${pkgver}"
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
