* update xorg-xcmsdb to 1.0.5-3

--- a/xorg/xorg-xcmsdb/PKGBUILD
+++ b/xorg/xorg-xcmsdb/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xorg-xcmsdb
 pkgver=1.0.5
 pkgrel=3
 pkgdesc="Device Color Characterization utility for X Color Management System"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11')
@@ -18,7 +18,7 @@ validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <al
 
 build() {
   cd xcmsdb-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
