* update xorg-luit to 1.1.1-4.1

--- a/xorg/xorg-luit/PKGBUILD
+++ b/xorg/xorg-luit/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=xorg-luit
 pkgver=1.1.1
-pkgrel=4
+pkgrel=4.1
 pkgdesc="Filter that can be run between an arbitrary application and a UTF-8 terminal emulator"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
-depends=('libfontenc')
+depends=('libfontenc' 'libx11')
 groups=('xorg' 'xorg-apps')
 makedepends=('xorg-util-macros')
 source=(https://xorg.freedesktop.org/archive/individual/app/luit-${pkgver}.tar.bz2
