* update libgtop to 2.40.0+2+g31db82ef-2

--- a/libgtop/PKGBUILD
+++ b/libgtop/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=2.40.0+2+g31db82ef
 pkgrel=2
 pkgdesc="A library for collecting system monitoring data"
 url="https://gitlab.gnome.org/GNOME/libgtop"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2 libxau)
 makedepends=(gobject-introspection git gtk-doc)
