* add libxfce4ui for riscv64

--- a/xfce4/libxfce4ui/PKGBUILD
+++ b/xfce4/libxfce4ui/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libxfce4ui
 pkgver=4.16.1
 pkgrel=1
 pkgdesc="Commonly used Xfce widgets among Xfce applications"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.xfce.org/"
 license=('GPL2')
 depends=('libxfce4util' 'gtk3' 'xfconf' 'libsm' 'startup-notification'
