* add libdbusmenu for riscv64

--- a/libdbusmenu/PKGBUILD
+++ b/libdbusmenu/PKGBUILD
@@ -12,7 +12,7 @@ pkgver=16.04.0
 pkgrel=4
 pkgdesc='Library for passing menus over DBus'
 url='https://launchpad.net/libdbusmenu'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL3' 'LGPL2.1' 'LGPL3')
 makedepends=('gnome-common' 'gobject-introspection' 'gtk2' 'gtk3' 'intltool' 'vala' 'valgrind')
 options=('!emptydirs')
@@ -40,7 +40,8 @@ build() {
       --sysconfdir=/etc \
       --localstatedir=/var \
       --disable-{dumper,static,tests} \
-      --with-gtk=3
+      --with-gtk=3 \
+      --build=${CHOST}
     make
   )
 
@@ -50,7 +51,8 @@ build() {
       --sysconfdir=/etc \
       --localstatedir=/var \
       --disable-{dumper,static,tests} \
-      --with-gtk=2
+      --with-gtk=2 \
+      --build=${CHOST}
     make
   )
 }
