* add thunar for riscv64

--- a/xfce4/thunar/PKGBUILD
+++ b/xfce4/thunar/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=thunar
 pkgver=4.16.10
 pkgrel=1
 pkgdesc="Modern file manager for Xfce"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/thunar/start"
 license=('GPL2' 'LGPL2.1')
 groups=('xfce4')
