* add xfdesktop for riscv64

--- a/xfce4/xfdesktop/PKGBUILD
+++ b/xfce4/xfdesktop/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfdesktop
 pkgver=4.16.0
 pkgrel=2
 pkgdesc="A desktop manager for Xfce"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfdesktop/start"
 license=('GPL2')
 groups=('xfce4')
