* update glade to 3.38.2-3

--- a/glade/PKGBUILD
+++ b/glade/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=glade
 pkgver=3.38.2
-pkgrel=1
+pkgrel=3
 pkgdesc="User Interface Builder for GTK+ applications"
 url="https://glade.gnome.org/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL)
 depends=(gtk3 libxml2)
 makedepends=(gtk-doc gobject-introspection python-gobject itstool docbook-xsl
@@ -18,9 +18,11 @@ groups=(gnome-extra)
 provides=(libgladeui-2.so)
 _commit=152031927c60c167ae7b035a78fca4d70678775c  # glade-3-38
 source=("git+https://gitlab.gnome.org/GNOME/glade.git#commit=$_commit"
-        python-dep.diff)
+        python-dep.diff
+        glade-3.38.2-meson-0.61.patch)
 sha256sums=('SKIP'
-            'dc1ed48403d473fcacef37fc6dd693e0442e7fed31bb852b20957c71595e2124')
+            'dc1ed48403d473fcacef37fc6dd693e0442e7fed31bb852b20957c71595e2124'
+            '5b0fbcb7187371d4ca30989e01fc762b473e76fccc2b70ed78c7c5d469eaf42c')
 
 pkgver() {
   cd $pkgname
@@ -35,6 +37,9 @@ prepare() {
 
   # Fix build with Python 3.9
   git apply -3 ../python-dep.diff
+
+  # Meson 0.61
+  patch -Np1 -i ${srcdir}/glade-3.38.2-meson-0.61.patch
 }
 
 build() {
