* update mousepad to 0.5.8-1

--- a/xfce4/mousepad/PKGBUILD
+++ b/xfce4/mousepad/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=mousepad
 pkgver=0.5.8
 pkgrel=1
 pkgdesc="Simple text editor for Xfce"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/mousepad/start"
 license=('GPL2')
 groups=('xfce4-goodies')
