* add libxpresent for riscv64

--- a/xorg/libxpresent/PKGBUILD
+++ b/xorg/libxpresent/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libxpresent
 pkgver=1.0.0
 pkgrel=2
 pkgdesc="X Present Extension library"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://gitlab.freedesktop.org/xorg/lib/libxpresent"
 license=('custom')
 depends=('libxfixes' 'libxrandr')
