* add xfwm4 for riscv64

--- a/xfce4/xfwm4/PKGBUILD
+++ b/xfce4/xfwm4/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfwm4
 pkgver=4.16.1
 pkgrel=3
 pkgdesc="Xfce's window manager"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfwm4/start"
 license=('GPL2')
 groups=('xfce4')
