* add xfce4-taskmanager for riscv64

--- a/xfce4/xfce4-taskmanager/PKGBUILD
+++ b/xfce4/xfce4-taskmanager/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xfce4-taskmanager
 pkgver=1.4.2
 pkgrel=1
 pkgdesc="Easy to use task manager"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/xfce4-taskmanager"
 license=('GPL2')
 depends=('libwnck3' 'libxmu')
