* add thunar-archive-plugin for riscv64

--- a/xfce4/thunar-archive-plugin/PKGBUILD
+++ b/xfce4/thunar-archive-plugin/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=thunar-archive-plugin
 pkgver=0.4.0
 pkgrel=3
 pkgdesc="Create and extract archives in Thunar"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/thunar/archive"
 license=('GPL2')
 groups=('xfce4-goodies')
