* add thunar-media-tags-plugin for riscv64

--- a/xfce4/thunar-media-tags-plugin/PKGBUILD
+++ b/xfce4/thunar-media-tags-plugin/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=thunar-media-tags-plugin
 pkgver=0.3.0
 pkgrel=2
 pkgdesc="Adds special features for media files to the Thunar File Manager"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 url="https://docs.xfce.org/xfce/thunar/media-tags"
 groups=('xfce4-goodies')
