* add thunar-volman for riscv64

--- a/xfce4/thunar-volman/PKGBUILD
+++ b/xfce4/thunar-volman/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=thunar-volman
 pkgver=4.16.0
 pkgrel=1
 pkgdesc="Automatic management of removeable devices in Thunar"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/thunar/thunar-volman"
 license=('GPL2')
 groups=('xfce4')
