* add orage for riscv64

--- a/xfce4/orage/PKGBUILD
+++ b/xfce4/orage/PKGBUILD
@@ -7,11 +7,11 @@ pkgname=orage
 pkgver=4.12.1
 pkgrel=5
 pkgdesc="A simple calendar application with reminders for Xfce"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://www.xfce.org/projects/"
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'libical' 'popt' 'libnotify' 'dbus-glib')
+depends=('xfce4-panel' 'libical' 'popt' 'libnotify' 'dbus-glib' 'gtk2')
 makedepends=('intltool')
 conflicts=('xfcalendar')
 replaces=('xfcalendar')
@@ -36,7 +36,8 @@ build() {
     --libexecdir=/usr/lib \
     --localstatedir=/var \
     --enable-libical \
-    --disable-debug
+    --disable-debug \
+    --build=${CHOST}
   make
 }
 
