* add xfce4-appfinder for riscv64

--- a/xfce4/xfce4-appfinder/PKGBUILD
+++ b/xfce4/xfce4-appfinder/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-appfinder
 pkgver=4.16.1
 pkgrel=2
 pkgdesc="An application finder for Xfce"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfce4-appfinder/start"
 license=('GPL2')
 groups=('xfce4')
