* add xfce4-clipman-plugin for riscv64

--- a/xfce4/xfce4-clipman-plugin/PKGBUILD
+++ b/xfce4/xfce4-clipman-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-clipman-plugin
 pkgver=1.6.2
 pkgrel=1
 pkgdesc="A clipboard plugin for the Xfce4 panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-clipman-plugin"
 groups=('xfce4-goodies')
