* update xfce4-cpufreq-plugin to 1.2.7-1

--- a/xfce4/xfce4-cpufreq-plugin/PKGBUILD
+++ b/xfce4/xfce4-cpufreq-plugin/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfce4-cpufreq-plugin
-pkgver=1.2.5
+pkgver=1.2.7
 pkgrel=1
 pkgdesc="CPU frequency plugin for the Xfce4 panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-cpufreq-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel')
 makedepends=('intltool')
 source=(https://archive.xfce.org/src/panel-plugins/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-sha256sums=('f8bd728de2d33e7ab30c682716b1cac4776b9884ce48b03fd7c32c9b24b13498')
+sha256sums=('5ad4fb6150f51917b2a8af65926c6e4e83340827835782a14844c6b88dbcc58c')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
