* add xfce4-mpc-plugin for riscv64

--- a/xfce4/xfce4-mpc-plugin/PKGBUILD
+++ b/xfce4/xfce4-mpc-plugin/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=xfce4-mpc-plugin
 pkgver=0.5.2
 pkgrel=2
 pkgdesc="Control the Music Player Daemon from the Xfce4 panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-mpc-plugin"
 license=('BSD')
 groups=('xfce4-goodies')
@@ -26,7 +26,7 @@ build() {
     --libexecdir=/usr/lib \
     --localstatedir=/var \
     --disable-static \
-    --disable-debug
+    --disable-debug --build=${CHOST}
   make
 }
 
