* add xfce4-netload-plugin for riscv64

--- a/xfce4/xfce4-netload-plugin/PKGBUILD
+++ b/xfce4/xfce4-netload-plugin/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfce4-netload-plugin
 pkgver=1.4.0
 pkgrel=1
 pkgdesc="A netload plugin for the Xfce panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-netload-plugin"
 license=('GPL')
 groups=('xfce4-goodies')
