* add xfce4-notifyd for riscv64

--- a/xfce4/xfce4-notifyd/PKGBUILD
+++ b/xfce4/xfce4-notifyd/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfce4-notifyd
 pkgver=0.6.2
 pkgrel=2
 pkgdesc="Notification daemon for the Xfce desktop"
-arch=( x86_64 powerpc64le powerpc )
+arch=( x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/notifyd/start"
 license=('GPL2')
 groups=('xfce4-goodies')
